# incremental-ray-tracer

./: .gitignore  .merlin  Makefile  README.md  dune  hello_world.ml  incremental_ray_tracer.ml  ray_tracer.ml  sort.ml  standard_ray_tracer.ml  walking.ml
_build/: .db  .digest-db  log
_build/.aliases/default/: fmt-00000000000000000000000000000000
_build/default/: .merlin  Makefile  dune  hello_world.ml  hello_world.pp.ml  ray_tracer.ml  ray_tracer.pp.ml  sort.ml  sort.pp.ml  walking.ml  walking.pp.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/.formatted/: ray_tracer.ml
_build/default/.hello_world.eobjs/: hello_world.pp.ml.d
_build/default/.hello_world.eobjs/byte/: dune__exe__Hello_world.cmi  (+2 more)
_build/default/.ray_tracer.eobjs/: ray_tracer.pp.ml.d
_build/default/.sort.eobjs/: sort.pp.ml.d
_build/default/.walking.eobjs/: dune__exe.ml-gen  sort.pp.ml.d  walking.pp.ml.d
traces/thatfucked-trace-big.trace/: open.creq
traces/thatfucked-trace-big.trace/Trace1.run/: RunIssues.storedata  event_data_60619.oa
traces/thatfucked-trace-big.trace/Trace2.run/: RunIssues.storedata  event_data_60623.oa
traces/thatfucked-trace-big.trace/Trace3.run/: RunIssues.storedata  event_data_60682.oa
traces/thatfucked-trace-big.trace/Trace4.run/: RunIssues.storedata  event_data_61124.oa
traces/thatfucked-trace-big.trace/Trace5.run/: RunIssues.storedata  event_data_61134.oa
traces/thatfucked-trace-big.trace/Trace6.run/: RunIssues.storedata  event_data_63200.oa
traces/thatfucked-trace-big.trace/corespace/: MANIFEST.plist
utils/: dune  ray_utils.ml
(+169 files in other folders)
